--- a/monster.html
+++ b/monster.html
@@ -33,7 +33,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html" target="_blank">Trang chủ</a></li>
+                    <li><a href="index.html" target="_blank">Trang chủ</a></li>
                     <li><a href="anime.html" target="_blank">Anime/Manga</a></li>
                     <li><a href="tcg.html" target="_blank">Game Thẻ Bài</a></li>
                     <li><a href="https://yugioh.fandom.com/wiki/Yu-Gi-Oh!_Wiki" target="_blank">Cộng đồng</a></li>
